recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:1: error: not found: value public
public void run() {
^