recursion.lessons.recursion.square.FourSquare.scala.code
public void run() {
	avance(100);
	droite(90);
}
